GH-1449 fix the profile icon getting cut off when user needs to verify account

--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -67,6 +67,9 @@
 				}
 			}
 		}
+		.profile-svg {
+			margin-right: 5px;
+		}
 		.base-badge {
 			@extend %pointer;
 			width: 38px;
